--- a/public/dart.html
+++ b/public/dart.html
@@ -8,7 +8,7 @@
       width: 960px;
     }
 
-    .container {
+    #container {
       width: 500px;
       aspect-ratio: 1;
       background-color: #f2f7f7;
@@ -18,6 +18,7 @@
 
     #arrow {
       width: 50px;
+      height: 0px;
       border: 1px solid black;
       position: relative;
     }
@@ -26,8 +27,8 @@
 </head>
 
 <body>
-  <div class="container">
-    <div id="arrow" style="width: 50px; height:0px; border:1px solid black"></div>
+  <div id="container">
+    <div id="arrow"></div>
   </div>
 </body>
 
