--- a/public/dart.html
+++ b/public/dart.html
@@ -8,7 +8,7 @@
       width: 960px;
     }
 
-    #container {
+    #view {
       width: 500px;
       aspect-ratio: 1;
       background-color: #f2f7f7;
@@ -28,9 +28,11 @@
 
 <body>
   <div id="container">
-    <div id="arrow"></div>
+    <div id="view">
+      <div id="arrow"></div>
+    </div>
+    <button id="shoot">Shoot</button>
   </div>
-  <button id="start">Start</button>
 </body>
 
 </html>
