Implemented 'Board' entity

--- a/public/dart.html
+++ b/public/dart.html
@@ -23,7 +23,7 @@
       position: relative;
     }
   </style>
-  <script src="../src/dart.js"></script>
+  <script src="../scripts/dart.js"></script>
 </head>
 
 <body>
