--- a/public/dart.html
+++ b/public/dart.html
@@ -2,34 +2,13 @@
 
 <head>
   <title>DART</title>
-  <style>
-    body {
-      margin: 0 auto;
-      width: 960px;
-    }
-
-    #view {
-      width: 500px;
-      aspect-ratio: 1;
-      background-color: #f2f7f7;
-      margin-top: 100px;
-      position: relative;
-    }
-
-    #arrow {
-      width: 50px;
-      height: 0px;
-      border: 1px solid black;
-      position: relative;
-    }
-  </style>
+  <link rel="stylesheet" href="./css/styles.css">
   <script src="../scripts/dart.js"></script>
 </head>
 
 <body>
   <div id="container">
     <div id="view">
-      <div id="arrow"></div>
     </div>
     <button id="shoot">Shoot</button>
   </div>
